# scrapping_task

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
scrapping_task/: constants.py  task1.py  task2.py  task3.py  task4.py  task5.py  utils.py
tests/: test_scrapping_task.py
