[tool.poetry]
name = "scrapping_task"
version = "0.1.0"
description = ""
authors = ["denek98 <defimov1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
lxml = "4.9.0"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.40"
matplotlib = "^3.5.3"
webdriver-manager = "^3.8.3"
selenium-wire = "^4.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"
mypy = "^0.971"
isort = "^5.10.1"
flake8 = "^5.0.4"
types-requests = "^2.28.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 170
target-version = ['py39', 'py310']
verbose = false
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 170
filter_files = true
force_alphabetical_sort_within_sections = true
multi_line_output = 3
include_trailing_comma = true
atomic = true
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
